--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   automerge:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: automerge
         uses: "pascalgn/automerge-action@v0.6.1"
